fix mobile alignment

--- a/apps/pinpoint/static/pinpoint/themes/nastygal/nastygal.css
+++ b/apps/pinpoint/static/pinpoint/themes/nastygal/nastygal.css
@@ -370,6 +370,12 @@
         margin-right: 0;
     }
 
+    #hero-area .row {
+        max-width: 100%;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
     .previewContainer .cell, .featured.product .cell {
         display: block;
         max-width: 100%;
